feat: Complete TalentAI microservices backend architecture
Features Added:
- Auth Service: JWT authentication, user management, RBAC
- Job Service: Job CRUD, applications, semantic search
- Resume Parser Service: AI-powered resume parsing with NLP
- Common Library: Shared utilities, logging, security

Resume Parser Service (Phase 4):
- spaCy NLP for entity extraction
- Sentence-Transformers for embeddings (384-dim vectors)
- PyPDF/docx/pytesseract for file parsing
- Real-time WebSocket updates for parsing progress
- Duplicate detection with file hashing & content similarity
- AI summary generation
- Skill/experience extraction with custom algorithms
- pgvector integration for semantic search
- Celery for async task processing
- Redis caching layer

Technical Improvements:
- Added performance monitoring middleware
- Improved error handling across all services

--- a/backend/services/resume_parser_service/tests/test_websocket.html
+++ b/backend/services/resume_parser_service/tests/test_websocket.html
@@ -213,7 +213,7 @@
     <div class="container">
         <!-- Header -->
         <div class="header">
-            <h1>🚀 Resume Parser - WebSocket Test</h1>
+            <h1>Resume Parser - WebSocket Test</h1>
             <div class="status disconnected" id="status">
                 <span id="status-text">Disconnected</span>
             </div>
@@ -250,7 +250,7 @@
 
         // Initialize
         document.addEventListener('DOMContentLoaded', () => {
-            console.log('🚀 Resume Parser WebSocket Test loaded');
+            console.log('Resume Parser WebSocket Test loaded');
             updateStatus('disconnected', 'Disconnected');
         });
 
@@ -279,8 +279,8 @@
 
             // Connection successful
             socket.on('connect', () => {
-                console.log('✅ WebSocket connected');
-                updateStatus('connected', 'Connected ✅');
+                console.log('WebSocket connected');
+                updateStatus('connected', 'Connected');
                 addMessage('System', `Connected as user: ${userId}`, 'system');
             });
 
@@ -292,25 +292,25 @@
 
             // Parsing progress updates
             socket.on('parsing_progress', (data) => {
-                console.log('📊 Progress:', data);
+                console.log('Progress:', data);
                 addProgressMessage(data);
             });
 
             // Parsing complete
             socket.on('parsing_complete', (data) => {
-                console.log('✅ Complete:', data);
+                console.log('Complete:', data);
                 addCompleteMessage(data);
             });
 
             // Batch progress
             socket.on('batch_progress', (data) => {
-                console.log('📦 Batch:', data);
+                console.log('Batch:', data);
                 addBatchMessage(data);
             });
 
             // Disconnection
             socket.on('disconnect', () => {
-                console.log('❌ WebSocket disconnected');
+                console.log('WebSocket disconnected');
                 updateStatus('disconnected', 'Disconnected');
                 addMessage('System', 'Disconnected from server', 'error');
             });
@@ -373,7 +373,7 @@
             const messageDiv = document.createElement('div');
             messageDiv.className = 'message progress';
             messageDiv.innerHTML = `
-                <div class="message-title">📄 ${data.filename}</div>
+                <div class="message-title">${data.filename}</div>
                 <div class="message-content">
                     <strong>[${data.stage}]</strong> ${data.message}
                 </div>
@@ -399,7 +399,7 @@
 
         function addBatchMessage(data) {
             const message = `Batch Progress: ${data.completed + data.failed}/${data.total} (${data.progress}%)`;
-            addMessage('📦 Batch Upload', message, 'progress');
+            addMessage('Batch Upload', message, 'progress');
         }
 
         function clearMessages() {
